[package]
name = "rusty_argentina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "~0.8.1", features = [
  "webgpu",
], default-features = false }
legion = "=0.3.1"
rodio = "0.16.0"
serde = { version = "=1.0.155" }
ron = "=0.6.1"

[profile.release]
lto = "thin"
